--- a/파이썬 데이터분석/Pandas/07. 데이터선택 (loc).ipynb
+++ b/파이썬 데이터분석/Pandas/07. 데이터선택 (loc).ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 데이터 선택 (loc)\n",
+    "이름을 이용하여 원하는 row 에서 원하는 col 선택"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
