--- a/파이썬 데이터분석/Pandas/08. 데이터 선택 (iloc).ipynb
+++ b/파이썬 데이터분석/Pandas/08. 데이터 선택 (iloc).ipynb
@@ -184,12 +184,443 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "이름         채치수\n",
+       "학교         북산고\n",
+       "키          197\n",
+       "국어          90\n",
+       "영어          85\n",
+       "수학         100\n",
+       "과학          95\n",
+       "사회          85\n",
+       "SW특기    Python\n",
+       "Name: 1번, dtype: object"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.iloc[0]\n",
+    "# 0번째 위치의 데이터"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "이름      강백호\n",
+       "학교      북산고\n",
+       "키       188\n",
+       "국어       15\n",
+       "영어       20\n",
+       "수학       10\n",
+       "과학       35\n",
+       "사회       10\n",
+       "SW특기    NaN\n",
+       "Name: 5번, dtype: object"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.iloc[4]\n",
+    "# 4번째 위치의 데이터 (강백호)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>이름</th>\n",
+       "      <th>학교</th>\n",
+       "      <th>키</th>\n",
+       "      <th>국어</th>\n",
+       "      <th>영어</th>\n",
+       "      <th>수학</th>\n",
+       "      <th>과학</th>\n",
+       "      <th>사회</th>\n",
+       "      <th>SW특기</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>지원번호</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1번</th>\n",
+       "      <td>채치수</td>\n",
+       "      <td>북산고</td>\n",
+       "      <td>197</td>\n",
+       "      <td>90</td>\n",
+       "      <td>85</td>\n",
+       "      <td>100</td>\n",
+       "      <td>95</td>\n",
+       "      <td>85</td>\n",
+       "      <td>Python</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2번</th>\n",
+       "      <td>정대만</td>\n",
+       "      <td>북산고</td>\n",
+       "      <td>184</td>\n",
+       "      <td>40</td>\n",
+       "      <td>35</td>\n",
+       "      <td>50</td>\n",
+       "      <td>55</td>\n",
+       "      <td>25</td>\n",
+       "      <td>Java</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3번</th>\n",
+       "      <td>송태섭</td>\n",
+       "      <td>북산고</td>\n",
+       "      <td>168</td>\n",
+       "      <td>80</td>\n",
+       "      <td>75</td>\n",
+       "      <td>70</td>\n",
+       "      <td>80</td>\n",
+       "      <td>75</td>\n",
+       "      <td>Javascript</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4번</th>\n",
+       "      <td>서태웅</td>\n",
+       "      <td>북산고</td>\n",
+       "      <td>187</td>\n",
+       "      <td>40</td>\n",
+       "      <td>60</td>\n",
+       "      <td>70</td>\n",
+       "      <td>75</td>\n",
+       "      <td>80</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5번</th>\n",
+       "      <td>강백호</td>\n",
+       "      <td>북산고</td>\n",
+       "      <td>188</td>\n",
+       "      <td>15</td>\n",
+       "      <td>20</td>\n",
+       "      <td>10</td>\n",
+       "      <td>35</td>\n",
+       "      <td>10</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       이름   학교    키  국어  영어   수학  과학  사회        SW특기\n",
+       "지원번호                                                \n",
+       "1번    채치수  북산고  197  90  85  100  95  85      Python\n",
+       "2번    정대만  북산고  184  40  35   50  55  25        Java\n",
+       "3번    송태섭  북산고  168  80  75   70  80  75  Javascript\n",
+       "4번    서태웅  북산고  187  40  60   70  75  80         NaN\n",
+       "5번    강백호  북산고  188  15  20   10  35  10         NaN"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.iloc[0:5]\n",
+    "# 0~4번째 위치의 데이터"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'북산고'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.iloc[0, 1]\n",
+    "# index 0번째 위치의 1번째 데이터 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "188"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.iloc[4,2]\n",
+    "# 5번 학생의 키 데이터 (4번째 위치의 2번째 데이터)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "지원번호\n",
+       "1번    197\n",
+       "2번    184\n",
+       "Name: 키, dtype: int64"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.iloc[[0,1],2]\n",
+    "# index 0,1번째(1번,2번) 위치의 2번째(키) 데이터"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>국어</th>\n",
+       "      <th>영어</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>지원번호</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1번</th>\n",
+       "      <td>90</td>\n",
+       "      <td>85</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2번</th>\n",
+       "      <td>40</td>\n",
+       "      <td>35</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      국어  영어\n",
+       "지원번호        \n",
+       "1번    90  85\n",
+       "2번    40  35"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.iloc[[0,1],[3,4]]\n",
+    "# 0,1번째 위치의 학생의 3,4번째 데이터(국어,영어)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>국어</th>\n",
+       "      <th>영어</th>\n",
+       "      <th>수학</th>\n",
+       "      <th>과학</th>\n",
+       "      <th>사회</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>지원번호</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1번</th>\n",
+       "      <td>90</td>\n",
+       "      <td>85</td>\n",
+       "      <td>100</td>\n",
+       "      <td>95</td>\n",
+       "      <td>85</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2번</th>\n",
+       "      <td>40</td>\n",
+       "      <td>35</td>\n",
+       "      <td>50</td>\n",
+       "      <td>55</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3번</th>\n",
+       "      <td>80</td>\n",
+       "      <td>75</td>\n",
+       "      <td>70</td>\n",
+       "      <td>80</td>\n",
+       "      <td>75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4번</th>\n",
+       "      <td>40</td>\n",
+       "      <td>60</td>\n",
+       "      <td>70</td>\n",
+       "      <td>75</td>\n",
+       "      <td>80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5번</th>\n",
+       "      <td>15</td>\n",
+       "      <td>20</td>\n",
+       "      <td>10</td>\n",
+       "      <td>35</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      국어  영어   수학  과학  사회\n",
+       "지원번호                     \n",
+       "1번    90  85  100  95  85\n",
+       "2번    40  35   50  55  25\n",
+       "3번    80  75   70  80  75\n",
+       "4번    40  60   70  75  80\n",
+       "5번    15  20   10  35  10"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.iloc[0:5,3:8]\n",
+    "# 0~4번째 위치의 학생의 3,4,5,6,7 번째 데이터     0~4/3~7"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df.iloc[0]"
-   ]
+   "source": []
   }
  ],
  "metadata": {
